# yd

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: basic_new.yaml  basic_old.yaml  complex_new.yaml  complex_old.yaml  env_new.yaml  env_old.yaml  list_new.yaml  list_old.yaml  test_yd.py
yd/: __init__.py  yamldiff.py
