[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yd"
version = "0.1.0"
description = "Intelligent YAML comparison tool with smart list sorting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Szymon Kośla", email = "szymon@kos.la"},
]
maintainers = [
    {name = "Szymon Kośla", email = "szymon@kos.la"},
]
keywords = ["yaml", "diff", "comparison", "kubernetes", "helm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=5.1",
]

[project.urls]
Homepage = "https://github.com/acze/yd"
Repository = "https://github.com/acze/yd"
Issues = "https://github.com/acze/yd/issues"
Changelog = "https://github.com/acze/yd/blob/main/CHANGELOG.md"

[project.scripts]
yd = "yd.yamldiff:main"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["."]
include = ["yd*"]

[tool.setuptools.package-data]
yd = ["*.py"]
